src/scss/_tom-select.scss
/**
 * @author Nicolas CARPi <nico-git@deltablot.email>
 * @author Marcel Bolten <github@marcelbolten.de>
 * @copyright 2024 Nicolas CARPi
 * @see https://www.elabftw.net Official website
 * @license AGPL-3.0
 * @package elabftw
 */

@use './variables';
@import 'tom-select/dist/scss/tom-select.bootstrap4';

.ts-control .item {
  background-color: var(--superlight);
  border-radius: 0.18rem;
  color: var(--strongest);
  white-space: nowrap;
}

.dark-mode {
  .ts-control {
    background-color: var(--mainbackground);
    border: 1px solid var(--secondary-muted);
  }

  #filterOwner-ts-control {
    background-color: var(--mainbackground);
    color: var(--mediumstrong);
  }

  .ts-dropdown,
  .ts-dropdown-content {
    background-color: var(--mainbackground);
    color: var(--mediumstrong);

    .active {
      background-color: var(--secondary-muted);
      color: var(--mediumstrong);
    }
  }
}

.items-placeholder {
  color: var(--mediumstrong) !important;
}

.dropdown-header {
  border: 0 !important;
}

// dropdown input e.g., in filter owner
.focus .ts-control,
.plugin-dropdown_input.focus .ts-dropdown .dropdown-input { /* stylelint-disable-line selector-class-pattern -- next-line does not work here */
  border: 1px solid var(--primary);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(41, 174, 185, 0.6);
  color: var(--mediumstrong);
}

.ts-dropdown {
  min-width: 200px;

  .dropdown-input-wrap .dropdown-input {
    border-radius: 0.25rem 0.25rem 0 0;
    border-width: 1px;
  }
}

.ts-wrapper {
  max-width: clamp(var(--breakpoint-sm), 35vw, 80vw);
  // don't block down button
  .ts-control:not(.rtl) {
    padding-right: 2rem !important;
  }

  &.multi {
    position: relative;

    .ts-control {
      flex-wrap: nowrap;
      gap: 4px;
      overflow-x: auto;
      position: relative;
      scrollbar-width: thin;

      // when there's multiple items, e.g., tags filter in show page
      .item {
        background-color: var(--superlight);
        color: var(--strongest);
      }

      &::-webkit-scrollbar {
        height: 4px;
      }

      &::-webkit-scrollbar-thumb {
        background: var(--firstlevel);
        border-radius: 2px;
      }

      .clear-button {
        background-color: var(--secondlevel);
        color: var(--mediumstrong);
        position: absolute;
      }
    }
  }

  // keep size of select for tag filter
  // prevent tags select from collapsing
  /* stylelint-disable-next-line selector-class-pattern */
  &.plugin-dropdown_input.dropdown-active:not(.has-items) .items-placeholder {
    display: inline-block !important;
  }

  // need some extra space for x so it does not overlay selected options
  /* stylelint-disable-next-line selector-class-pattern */
  &.plugin-clear_button .ts-control {
    padding-right: 30px !important;
  }

  // don't add padding if not multi
  &:not(.multi) .ts-control .item {
    padding: 0 5px;
  }

  // avoid inheritance form .text-center for team selection on register page
  #team-ts-dropdown {
    text-align: left;
  }
}

// let the metavalue inuput stretch to same height as metakey select
#metavalue {
  height: auto;
}

// the input is a two-lined tomSelect, allowing it to behave same as tags input. But we have a Select so this is needed.
// behavior inspired from https://tom-select.js.org/plugins/no-backspace-delete/
#itemSelectWrapper,
#itemSelectWrapperModal {
  .ts-control,
  .ts-wrapper {
    display: none;
  }
}

// div containing the selected items from tom-select multi-inputs (permissions modal)
.ts-wrapper {
  position: relative; /* see https://tom-select.js.org/plugins/no-backspace-delete/ */

  .ts-control {
    display: flex;
    flex-wrap: wrap !important; // override forced default
  }
}

.selected-item-badge {
  background-color: var(--badge-color, var(--mainbackground));
  border-radius: 999px;
  color: var(--chrome-fg);
  font-size: 1.2rem;
  margin: 0 6px 6px 0;
  padding: 4px 10px;
}

